feat(): Made multiple releod changes to update persistence of orders through memory in cook stage.